assets/style.css
html {
    scroll-behavior: smooth;
  }

/*----changing size so the logo is in the same line as the menu on mobile----*/

.navbar-brand {
    width: 50%;
    height: 50%;
}

/*-----------------------------------------------------------------------------*/
.navbar {
    background-color: white;
    justify-content: center;
    padding: 0;
}

.navbar > * {
    margin: 0 3px;
}

.flagImg {
    height: 20px;
    width: 30px;
}


#home {
    margin: 5rem 0 0 0;
    padding: 0;
    max-width: 100%;

}

#servicesCont {
    max-width: 90%;
}

#services {
    margin: 0;
}
#services .btn {
    padding: 3px 3px;
}

.jumbotron {
    height: 90%;
}

form {
    width: 100%;
}

#fcols div {
    padding: 0 5px; 
}

#fAddress, #freviews {
    font-size: 9px;
}


#reviewsBox, #fstars {
    text-align: center;
}

#icons > div {
    padding: 0;
    width: 20px;
}
/*--------------------navbar desktop---------------*/
@media (min-width: 768px) { 
    .navbar-brand {
        width: 25%;
        height: 50%;
    }

    .navbar > * {
        margin: 0 20px;
    }

    .navbar {
        justify-content: center;
    }
 }
/*--------------------flipcards for desktop---------------*/
@media (min-width: 1200px) {

    .flipCardRotate {
        position: relative;
        transition: transform 0.7s;
        transform-style: preserve-3d;
        perspective: 1000px;
    }

    .flipCard:hover .flipCardRotate {
        transform: rotateY(180deg);
    }

    .flipCardCover,
    .flipCardContent {
        backface-visibility: hidden;
    }

    .flipCardContent {
        position: relative;
        transform: rotateY(180deg);
    }

    .flipCardCover {
        position: absolute;
        top: 75px;
        text-align: center;
    }
}

/*------------------------------------------------------------*/

